--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "pg": "4.x",
     "body-parser": "^1.15.0",
+    "cool-ascii-faces": "1.3.4",
+    "ejs": "2.4.1",
     "express": "^4.13.4",
     "mysql": "^2.10.2",
     "path": "^0.12.7"
